--- a/extensions/system/theme/less/uikit/uikit.less
+++ b/extensions/system/theme/less/uikit/uikit.less
@@ -67,6 +67,7 @@
 @import "./../../../../vendor/assets/uikit/less/addons/autocomplete.less";
 @import "./../../../../vendor/assets/uikit/less/addons/datepicker.less";
 @import "./../../../../vendor/assets/uikit/less/addons/htmleditor.less";
+@import "./../../../../vendor/assets/uikit/less/addons/nestable.less";
 @import "./../../../../vendor/assets/uikit/less/addons/notify.less";
 @import "./../../../../vendor/assets/uikit/less/addons/sortable.less";
 @import "./../../../../vendor/assets/uikit/less/addons/sticky.less";
@@ -83,5 +84,5 @@
 @import "addons/datepicker.less";
 @import "addons/htmleditor.less";
 @import "addons/notify.less";
-@import "addons/sortable.less";
+@import "addons/nestable.less";
 @import "addons/sticky.less";
