refactored pk-panel-icon cleanup admin logo and dropdown

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -398,3 +398,16 @@
     background-size: contain;
     vertical-align: middle;
 }
+
+
+/* `pk-panel-icon`
+ ========================================================================== */
+
+.pk-panel-icon {
+    color: #444;
+    text-align: center;
+}
+
+.pk-panel-icon:hover { color: #37a5e4; }
+
+.pk-panel-icon > p { margin-top: 10px; }
