--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -24,6 +24,22 @@ html { overflow-y: scroll; }
 .tm-navbar-margin { margin-bottom: 110px; }
 
 
+/* Logo
+ ========================================================================== */
+
+.tm-logo { opacity: 0.8; }
+.tm-logo:hover { opacity: 1; }
+
+
+/* Dropdown
+ ========================================================================== */
+
+.tm-dropdown { width: 350px; }
+
+.tm-dropdown .uk-grid { margin-top: -25px; }
+.tm-dropdown .uk-grid > * { padding-top: 25px; }
+
+
 /* Option toolbar
 ========================================================================== */
 
@@ -36,48 +52,6 @@ html { overflow-y: scroll; }
     border-bottom: 1px solid #e5e5e5;
     background: #fff;
 }
-
-
-/* Dropdown
- ========================================================================== */
-
-.tm-dropdown {
-    width: 350px;
-    text-align: center;
-}
-
-.tm-dropdown a {
-    display: block;
-    color: #444;
-    text-align: center;
-}
-
-.tm-dropdown a:hover { color: #37a5e4; }
-
-.tm-dropdown p { margin-top: 10px; }
-
-
-/* Modifier `tm-subnav`
- ========================================================================== */
-
-.tm-subnav {
-    margin: 0 0 30px 0;
-    border: 1px solid @global-border;
-    background: #fff;
-}
-
-.tm-subnav > li:nth-child(n+2) { margin-left: 0; }
-
-.tm-subnav > li > a {
-    padding: 12px 15px;
-    border-right: 1px solid @global-border;
-    color: @global-muted-color;
-    text-decoration: none;
-}
-
-.tm-subnav > li:hover > a,
-.tm-subnav > li > a:focus,
-.tm-subnav > li.uk-active > a { color: @global-color; }
 
 
 /* Main
