fixed toolbar z-index issue

--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7850,6 +7850,7 @@ html {
   position: absolute;
   top: 61px;
   left: 0;
+  z-index: 1;
   width: 100%;
   padding: 15px 0;
   border-bottom: 1px solid #e5e5e5;
