uikit sortable updated

--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7385,6 +7385,9 @@ a.uk-datepicker-table-muted {
 /* ========================================================================
    Component: sortable
  ========================================================================== */
+.uk-sortable {
+  position: relative;
+}
 .uk-sortable [draggable] {
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -7403,10 +7406,6 @@ a.uk-datepicker-table-muted {
  ========================================================================== */
 .uk-sortable-dragging {
   opacity: .25;
-  -webkit-transition: -webkit-transform 0.2s ease-out;
-  transition: -moz-transform 0.2s ease-out;
-  -webkit-transform: scale(0.9);
-  transform: scale(0.9);
 }
 /* Sub-modifier `uk-sortable-over`
  ========================================================================== */
