truncate extension names in admin drop down menu

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -410,4 +410,9 @@
 
 .pk-panel-icon:hover { color: #37a5e4; }
 
-.pk-panel-icon > p { margin-top: 10px; }
+.pk-panel-icon > p {
+    margin-top: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
