--- a/extensions/system/theme/less/uikit/navbar.less
+++ b/extensions/system/theme/less/uikit/navbar.less
@@ -36,7 +36,7 @@
 // Component
 // ========================================================================
 
-.hook-navbar() {}
+.hook-navbar() { position: relative; }
 
 
 // Sub-object: `uk-navbar-nav`
@@ -57,7 +57,7 @@
 // Sub-object: `uk-navbar-content`
 // ========================================================================
 
-.hook-navbar-content() { position: relative; }
+.hook-navbar-content() {}
 
 
 // Miscellaneous
