--- a/extensions/system/theme/less/uikit/overlay.less
+++ b/extensions/system/theme/less/uikit/overlay.less
@@ -25,6 +25,12 @@
 .hook-overlay-area-icon() {}
 
 
+// Sub-object `uk-overlay-area-content`
+// ========================================================================
+
+.hook-overlay-area-content() {}
+
+
 // Sub-object `uk-overlay-caption`
 // ========================================================================
 
