--- a/themes/alpha/less/uikit/overlay.less
+++ b/themes/alpha/less/uikit/overlay.less
@@ -24,6 +24,12 @@
 .hook-overlay-area-icon() {}
 
 
+// Sub-object `uk-overlay-area-content`
+// ========================================================================
+
+.hook-overlay-area-content() {}
+
+
 // Sub-object `uk-overlay-caption`
 // ========================================================================
 
