--- a/themes/alpha/less/uikit/pagination.less
+++ b/themes/alpha/less/uikit/pagination.less
@@ -38,17 +38,20 @@
 // Items
 //
 
-.hook-pagination-item() { border-radius: @global-border-radius; }
+.hook-pagination-item() {
+	border: 1px solid @pagination-border;
+	border-radius: @global-border-radius;
+}
 
 // Link
-.hook-pagination-link() { border: 1px solid @pagination-border; }
+.hook-pagination-link() {}
 
 .hook-pagination-link-hover() { border-color: @pagination-hover-border; }
 
 .hook-pagination-link-active() { box-shadow: inset 0 1px 5px -1px rgba(0,0,0,0.1); }
 
 // Active
-.hook-pagination-active() {}
+.hook-pagination-active() { border-color: transparent; }
 
 // Disabled
 .hook-pagination-disabled() { border: 1px solid @pagination-border; }
