--- a/themes/alpha/less/uikit/tooltip.less
+++ b/themes/alpha/less/uikit/tooltip.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@tooltip-z-index:                               (@global-z-index + 30);
+@tooltip-z-index:                               @global-z-index + 30;
 
 @tooltip-background:                            #333335;
 @tooltip-color:                                 #dbdbdc;
