updated offcavas style and nav in admin theme

--- a/extensions/system/theme/less/uikit/nav.less
+++ b/extensions/system/theme/less/uikit/nav.less
@@ -48,14 +48,13 @@
 @nav-navbar-nested-color:                       @global-navbar-color;
 @nav-navbar-nested-hover-color:                 @global-navbar-hover-color;
 
-@nav-offcanvas-color:                           @offcanvas-panel-link-color;
-@nav-offcanvas-hover-background:                lighten(@offcanvas-bar-background, 5%);
-@nav-offcanvas-hover-color:                     @offcanvas-panel-link-hover-color;
-@nav-offcanvas-active-background:               darken(@offcanvas-bar-background, 10%);
-@nav-offcanvas-active-color:                    @offcanvas-panel-link-hover-color;
-@nav-offcanvas-header-color:                    @offcanvas-panel-color;
-@nav-offcanvas-divider-border:                  #333;
-@nav-offcanvas-divider-border-width:            2px;
+@nav-offcanvas-color:                           @global-color;
+@nav-offcanvas-hover-background:                #f5f5f5;
+@nav-offcanvas-hover-color:                     @global-color;
+@nav-offcanvas-active-background:               #f5f5f5;
+@nav-offcanvas-active-color:                    @global-color;
+@nav-offcanvas-header-color:                    @global-muted-color;
+@nav-offcanvas-divider-border:                  #ddd;
 @nav-offcanvas-nested-color:                    @offcanvas-panel-link-color;
 @nav-offcanvas-nested-hover-color:              @offcanvas-panel-link-hover-color;
 
